--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "leaflet": "^1.4.0",
+    "lodash": "^4.17.11",
+    "mapbox-gl": "^0.52.0",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-heatmap": "^1.0.6",
+    "react-leaflet": "^2.2.0",
+    "react-leaflet-heatmap-layer": "^2.0.0",
+    "react-mapbox-gl": "^4.2.0",
+    "react-scripts": "2.1.3",
+    "simpleheat": "^0.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
